--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@embroider/webpack": "^3.2.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "autoprefixer": "^10.4.20",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
     "ember-auto-import": "^2.7.4",
@@ -46,6 +47,7 @@
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^8.2.0",
     "ember-data": "~5.3.8",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
@@ -62,12 +64,14 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-qunit": "^8.1.1",
     "loader.js": "^4.7.0",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.3.2",
     "qunit": "^2.21.0",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
+    "tailwindcss": "^3.4.16",
     "tracked-built-ins": "^3.3.0",
     "webpack": "^5.92.1"
   },
